--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,8 +8,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .footer {
@@ -108,22 +106,17 @@
   margin-left: 0.5rem;
 }
 
+.programCard + .programCard {
+  margin-top: 8px;
+}
+
+.list {
+  padding: 8px 0;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
   }
 }
