--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -118,6 +118,11 @@
   width: 48px;
 }
 
+.itemIcon {
+  width: 48px;
+  height: 32px;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
